logs/dag_id=dags_new_version/run_id=manual__2022-06-17T08:30:04.092813+00:00/task_id=create_table/attempt=1.log
[2022-06-17 08:30:07,817] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: dags_new_version.create_table manual__2022-06-17T08:30:04.092813+00:00 [queued]>
[2022-06-17 08:30:07,844] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: dags_new_version.create_table manual__2022-06-17T08:30:04.092813+00:00 [queued]>
[2022-06-17 08:30:07,845] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 08:30:07,846] {taskinstance.py:1357} INFO - Starting attempt 1 of 2
[2022-06-17 08:30:07,848] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 08:30:07,876] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-17 08:30:04.092813+00:00
[2022-06-17 08:30:07,884] {standard_task_runner.py:52} INFO - Started process 2528 to run task
[2022-06-17 08:30:07,897] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dags_new_version', 'create_table', 'manual__2022-06-17T08:30:04.092813+00:00', '--job-id', '112', '--raw', '--subdir', 'DAGS_FOLDER/user.py', '--cfg-path', '/tmp/tmplu3xgbqy', '--error-file', '/tmp/tmpn6z543l5']
[2022-06-17 08:30:07,900] {standard_task_runner.py:80} INFO - Job 112: Subtask create_table
[2022-06-17 08:30:08,019] {task_command.py:370} INFO - Running <TaskInstance: dags_new_version.create_table manual__2022-06-17T08:30:04.092813+00:00 [running]> on host adccabfb4a32
[2022-06-17 08:30:09,302] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dags_new_version
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-17T08:30:04.092813+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-17T08:30:04.092813+00:00
[2022-06-17 08:30:09,379] {base.py:68} INFO - Using connection ID 'postgre_sql' for task execution.
[2022-06-17 08:30:09,587] {dbapi.py:213} INFO - Running statement: 
        CREATE TABLE IF EXISTS z1_user(
            user_id SERIAL PRIMARY KEY,
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email VARCHAR(255),
            address VARCHAR(255),
            work VARCHAR(255),
            other TEXT
        )
        , parameters: None
[2022-06-17 08:30:09,607] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXISTS"
LINE 2:         CREATE TABLE IF EXISTS z1_user(
                                ^

[2022-06-17 08:30:09,845] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dags_new_version, task_id=create_table, execution_date=20220617T083004, start_date=20220617T083007, end_date=20220617T083009
[2022-06-17 08:30:09,974] {standard_task_runner.py:97} ERROR - Failed to execute job 112 for task create_table (syntax error at or near "EXISTS"
LINE 2:         CREATE TABLE IF EXISTS z1_user(
                                ^
; 2528)
[2022-06-17 08:30:10,074] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-17 08:30:10,624] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
